<resources>
    <string name="app_name">CurrencyWizard</string>
    <string name="CurrencyWizard">Currency Wizard</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="default_currency">Default Currency</string>
    <string name="help">Have questions or need help?</string>
    <string name="email">Email:</string>
    <string name="email_us"><a href="mailto:currencywizard@gmail.com">currencywizard@gmail.com</a></string>
    <string name="email_address">currencywizard@gmail.com</string>
    <string name="align_text">Align Text</string>
    <string name="currency_details">Currency Details</string>
    <string name="add_to">Add to</string>
    <string name="existing_basket">Existing Basket</string>
    <string name="new_basket">New Basket</string>
    <string name="title">Title</string>
    <string name="Add_a_Note">Add a Note</string>
    <string name="Create">Create</string>
    <string name="Created_on">Created on:</string>
    <string name="note">Note:</string>
    <string name="Add_to_a_New_Basket">Add to a New Basket</string>
    <string name="rate_app">Rate app</string>
    <string name="empty_list">Basket is Empty</string>
    <string name="empty_list1">Item is Empty</string>
    <string name="terms1">Termination clause for websites that do not have accounts. if your website or mobile app allows users to register and have an account , create your own Terms and Conditions.</string>
    <string name="terms2">We may terminate or suspend access to our Service immediately without prior notice or liability,for any reason whatsoever, including without limitation if you breach the Terms.</string>
    <string name="terms3">All provision of the Terms which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions,warranty disclaimers,indemnity.</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
</resources>