<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:background="@color/title"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/transparent_background">

        <requestFocus />

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="vertical">

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:id="@+id/cancel"
                android:background="@color/background"
                android:text="@string/cancel"
                android:textColor="@color/white"

                />

        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/background"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:text="@string/update"
                android:id="@+id/update"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>