<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".activity.Settings">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@color/header">

        <sdi.com.currencywizard.views.TextViewGothamBook
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="Settings"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/settings_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/settings_title"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/back" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/default_currency"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/header"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp">

        <sdi.com.currencywizard.views.TextViewGothamBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/currency_name"
            android:paddingLeft="10dp"
            android:text="@string/default_currency"
            android:textColor="@color/title"
            android:textSize="@dimen/currency_details" />


        <ImageButton
            android:id="@+id/setting_currency"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/currency_name"
            android:layout_toStartOf="@+id/currency_name"
            android:background="@drawable/euro" />

        <sdi.com.currencywizard.views.TextViewGothamMediumOtf
            android:id="@+id/currency_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:text="Euro"
            android:textColor="@color/created_on"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/default_currency"
        android:background="@color/divider" />


    <RelativeLayout
        android:id="@+id/default_currency2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/view2"
        android:background="@color/white">


        <sdi.com.currencywizard.views.TextViewGothamBook
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:text="@string/help"
            android:textColor="@color/title"
            android:textSize="@dimen/currency_details" />

        <sdi.com.currencywizard.views.TextViewGothamMediumOtf
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="@string/email"
            android:textColor="@color/created_on"
            android:textStyle="bold" />

        <sdi.com.currencywizard.views.TextViewGothamBook
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:autoLink="email"
            android:contextClickable="true"
            android:text="@string/email_us"
            android:textColor="@color/email_textColor"
            android:textSize="14dp"
            android:textStyle="normal" />

    </RelativeLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/default_currency2"
        android:background="@color/divider" />


    <RelativeLayout
        android:id="@+id/default_currency4"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/view1"
        android:background="@color/white"
        android:gravity="center">


        <sdi.com.currencywizard.views.TextViewGothamBook
            android:id="@+id/privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/title"
            android:textSize="@dimen/currency_details" />

    </RelativeLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/default_currency4"
        android:background="@color/divider" />


    <RelativeLayout
        android:id="@+id/default_currency6"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/default_currency4"
        android:layout_marginTop="3dp"
        android:background="@color/white"
        android:gravity="center">


        <sdi.com.currencywizard.views.TextViewGothamBook
            android:id="@+id/terms_and_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/terms_conditions"
            android:textColor="@color/title"
            android:textSize="@dimen/currency_details" />

    </RelativeLayout>


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/default_currency6"
        android:background="@color/divider" />

    <RelativeLayout
        android:id="@+id/rate_app"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@+id/view4"
        android:background="@color/white"
        android:gravity="center">

        <sdi.com.currencywizard.views.TextViewGothamBook
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/rate_app"
            android:textColor="@color/title"
            android:textSize="@dimen/currency_details" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rate_app"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/basket"
        android:layout_weight="1"
        android:background="@drawable/grey"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/camera"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/settings" />

    </LinearLayout>

</RelativeLayout>
